<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BitChat</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_hint">Please Enter Your Name</string>
    <string name="password_hint">Please Enter Your Password</string>
    <string name="number_hint">Please Enter Your Number</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="log_in_button">Log In</string>
    <string name="send">send</string>

</resources>
