<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="20dp">
        <EditText
            android:id="@+id/user_name"
            android:hint="@string/name_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/user_password"
            android:hint="@string/password_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/user_number"
            android:hint="@string/number_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal">
            <Button android:id="@+id/sign_up_button"
                    android:hint="@string/sign_up_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"/>
            <Button android:id="@+id/log_in_button"
                    android:hint="@string/log_in_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"/>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
